ingress.config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo-api
---
apiVersion: v1
kind: Service
metadata:
  name: foo-api
  namespace: foo-api
  labels:
    app: foo-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: foo-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-api
  namespace: foo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-api
  template:
    metadata:
      namespace: foo-api
      labels:
        app: foo-api
    spec:
      containers:
      - name: foo-app
        image: kicbase/echo-server:1.0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-api
  namespace: foo-api
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-api
            port:
              number: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: bar-api
---
apiVersion: v1
kind: Service
metadata:
  name: bar-api
  namespace: bar-api
  labels:
    app: bar-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: bar-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-api
  namespace: bar-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-api
  template:
    metadata:
      name: bar-api
      labels:
        app: bar-api
    spec:
      containers:
      - name: bar-app
        image: kicbase/echo-server:1.0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-api
  namespace: bar-api
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-api
            port:
              number: 8080
